# ai-training-inference

./: .gitignore  LICENSE  README.md
python/: requirements.txt
python/data/: synthetic_housing_data.csv
python/models/: house_price_model.pth  house_price_model_metadata.json  scalers.pkl
python/src/training/: model.py  train.py
python/src/utils/: data_utils.py
rust/: Cargo.toml
rust/src/: main.rs
