[package]
name = "house-price-inference"
version = "0.1.0"
edition = "2024"
authors = ["Abrar Shivani shivaniabrar@gmail.com"]
description = "House price prediction using ONNX models with Rust"

# Enable clippy lints project-wide
[lints.clippy]
all = "warn"
pedantic = "warn"
# You can disable specific lints
missing_errors_doc = "allow"
must_use_candidate = "allow"

[dependencies]
tract-onnx = "0.19.1"
ndarray = "0.15.6"
csv = "1.2.1"
anyhow = "1.0.71"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
clap = { version = "4.3.0", features = ["derive"] }
